--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </div>
             <div>
               <span class="reaction_score">80</span>
-              <span class="reaction_max_score">/100</span>
+              <span class="max_score">/100</span>
             </div>
           </li>
 
@@ -67,7 +67,7 @@
             </div>
             <div>
               <span class="memory_score">92</span>
-              <span class="memory_max_score">/100</span>
+              <span class="max_score">/100</span>
             </div>
           </li>
 
@@ -78,7 +78,7 @@
             </div>
             <div>
               <span class="verbal_score">61</span>
-              <span class="verbal_max_score">/100</span>
+              <span class="max_score">/100</span>
             </div>
           </li>
 
@@ -89,7 +89,7 @@
             </div>
             <div>
               <span class="visual_score">72</span>
-              <span class="visual_max_score">/100</span>
+              <span class="max_score">/100</span>
             </div>
           </li>
         </ul>
@@ -103,7 +103,7 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+      >. Coded by <a href="https://github.com/Baken0101">Baken</a>.
     </div>
   </body>
 </html>
